--- a/src/transitmap/output/protobuf/CMakeLists.txt
+++ b/src/transitmap/output/protobuf/CMakeLists.txt
@@ -4,5 +4,9 @@ include_directories(${Protobuf_INCLUDE_DIR})
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER vector_tile.proto)
 ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
 
-target_link_libraries(proto ${Protobuf_LIBRARIES})
+if (LOOM_PROTOBUF_LIBS)
+	target_link_libraries(proto ${LOOM_PROTOBUF_LIBS})
+else()
+	target_link_libraries(proto ${Protobuf_LIBRARIES})
+endif()
 endif()
