--- a/src/transitmap/CMakeLists.txt
+++ b/src/transitmap/CMakeLists.txt
@@ -22,7 +22,11 @@ add_library(transitmap_dep ${transitmap_SRC})
 
 if (Protobuf_FOUND AND Protobuf_PROTOC_EXECUTABLE)
 	add_dependencies(transitmap_dep proto)
-	target_link_libraries(transitmap transitmap_dep shared_dep dot_dep pb_util_graph pb_util_geo pb_util_json pb_util_xml pb_util proto ${Protobuf_LIBRARIES})
+	if (LOOM_PROTOBUF_LIBS)
+		target_link_libraries(transitmap transitmap_dep shared_dep dot_dep pb_util_graph pb_util_geo pb_util_json pb_util_xml pb_util proto ${LOOM_PROTOBUF_LIBS})
+	else()
+		target_link_libraries(transitmap transitmap_dep shared_dep dot_dep pb_util_graph pb_util_geo pb_util_json pb_util_xml pb_util proto ${Protobuf_LIBRARIES})
+	endif()
 else()
 	target_link_libraries(transitmap transitmap_dep shared_dep dot_dep pb_util_graph pb_util_geo pb_util_json pb_util_xml pb_util)
 endif()
